Fix JavaScript syntax error in event calendar - replace JSON.stringify with event index approach

--- a/event_calendar_minified.html
+++ b/event_calendar_minified.html
@@ -1050,7 +1050,7 @@
                     const events = await fetchGoogleCalendarEvents();
                     // Add sample events if API returns empty
                     let finalEvents = events;
-                    if (events.length === 0) {
+                    if (finalEvents.length === 0) {
                         finalEvents = [
                             {
                                 title: 'Sample Event 1',
@@ -1162,17 +1162,17 @@
             }
             function displayEvents() {
                 const eventsList = document.getElementById('eventsList');
-                if (events.length === 0) {
+                if (window.events.length === 0) {
                     eventsList.innerHTML = `
                         <div class="no-events">
                             <p>No upcoming events scheduled.</p>
-                            <p><em>API returned ${events.length} events</em></p>
+                            <p><em>API returned ${window.events.length} events</em></p>
                             <button class="refresh-btn" onclick="loadEvents()">Refresh</button>
                         </div>
                     `;
                     return;
                 }
-                const upcomingEvents = events
+                const upcomingEvents = window.events
                     .filter(event => new Date(event.start) >= new Date())
                     .slice(0, 10); // Show next 10 events
                 eventsList.innerHTML = `
@@ -1221,7 +1221,7 @@
                                         </div>
                                     </div>
                                     <div class="event-actions">
-                                        <button onclick="showEventDetails(${JSON.stringify(event).replace(/"/g, '&quot;')})" class="more-info-btn">MORE INFO</button>
+                                        <button onclick="showEventDetails(${window.events.indexOf(event)})" class="more-info-btn">MORE INFO</button>
                                     </div>
                                 </div>
                             `;
@@ -1263,7 +1263,12 @@
                 // Removed debug alert - function can be customized as needed
             }
             // Event Details Modal Functions
-            function showEventDetails(event) {
+            function showEventDetails(eventIndex) {
+    const event = window.events[eventIndex];
+    if (!event) {
+        console.error('Event not found at index:', eventIndex);
+        return;
+    }
                 const modal = document.getElementById('eventModal');
                 const modalTitle = document.getElementById('modalTitle');
                 const modalSubtitle = document.getElementById('modalSubtitle');
