--- a/event_calendar_minified.html
+++ b/event_calendar_minified.html
@@ -773,46 +773,7 @@
                 border-radius: 3px;
                 font-family: 'Courier New', monospace;
             }
-            .loading-container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                padding: 4rem 2rem;
-                text-align: center;
-                background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0a0a0a 100%);
-                border: 2px solid #333;
-                border-radius: 12px;
-                margin: 2rem 0;
-                min-height: 200px;
-            }
-            .loading-spinner {
-                width: 50px;
-                height: 50px;
-                border: 4px solid #333;
-                border-top: 4px solid #ffffff;
-                border-radius: 50%;
-                animation: spin 1s linear infinite;
-                margin-bottom: 1.5rem;
-            }
-            @keyframes spin {
-                0% { transform: rotate(0deg); }
-                100% { transform: rotate(360deg); }
-            }
-            .loading-text {
-                font-size: 1.2rem;
-                font-weight: 600;
-                color: #ffffff;
-                margin-bottom: 0.5rem;
-                text-transform: uppercase;
-                letter-spacing: 1px;
-            }
-            .loading-status {
-                font-size: 0.9rem;
-                color: #cccccc;
-                font-weight: 400;
-                opacity: 0.8;
-            }
+
             @media (max-width: 768px) {
                 .header h1 {
                     font-size: 2.5rem;
@@ -879,14 +840,8 @@
                 <div class="content">
                     <div class="section">
                         <h2>Upcoming Events</h2>
-                        <!-- Loading State -->
-                        <div id="loadingState" class="loading-container">
-                            <div class="loading-spinner"></div>
-                            <div class="loading-text">Loading events...</div>
-                            <div class="loading-status" id="loadingStatus">Connecting to calendar...</div>
-                        </div>
                         <!-- Events List -->
-                        <div id="eventsList" style="display: none;">
+                        <div id="eventsList">
                         </div>
                     </div>
                 </div>
@@ -970,27 +925,7 @@
             // 6. Check "Make available to public"
             // 7. Set "See all event details" to "Make available to public"
             let currentDate = new Date();
-            // ========================================
-            // LOADING STATE FUNCTIONS
-            // ========================================
-            function showLoading() {
-                const loadingState = document.getElementById('loadingState');
-                const eventsList = document.getElementById('eventsList');
-                loadingState.style.display = 'flex';
-                eventsList.style.display = 'none';
-            }
-            function hideLoading() {
-                const loadingState = document.getElementById('loadingState');
-                const eventsList = document.getElementById('eventsList');
-                loadingState.style.display = 'none';
-                eventsList.style.display = 'block';
-            }
-            function updateLoadingStatus(message) {
-                const loadingStatus = document.getElementById('loadingStatus');
-                if (loadingStatus) {
-                    loadingStatus.textContent = message;
-                }
-            }
+
             // Initialize events
             document.addEventListener('DOMContentLoaded', function() {
                 // Check if API key is configured
@@ -1042,11 +977,7 @@
             }
             async function loadEvents() {
                 try {
-                    // Show loading state
-                    showLoading();
-                    updateLoadingStatus('Connecting to Google Calendar...');
                     // Fetch events from API
-                    updateLoadingStatus('Fetching events...');
                     const events = await fetchGoogleCalendarEvents();
                     // Add sample events if API returns empty
                     let finalEvents = events;
@@ -1076,12 +1007,9 @@
                     }
                     // Update global state
                     window.events = finalEvents;
-                    // Hide loading and display events
-                    updateLoadingStatus('Displaying events...');
-                    hideLoading();
+                    // Display events
                     displayEvents();
                 } catch (error) {
-                    hideLoading();
                     showError('Failed to load events from Google Calendar API', error.message);
                 }
             }
@@ -1117,7 +1045,6 @@
                     }
                 };
                 try {
-                    updateLoadingStatus('Making API request...');
                     const response = await fetchWithTimeout(url, {
                         method: 'GET',
                         headers: {
@@ -1135,7 +1062,6 @@
                             throw new Error(`HTTP error! status: ${response.status} - ${response.statusText}`);
                         }
                     }
-                    updateLoadingStatus('Processing response...');
                     const data = await response.json();
                     if (!data.items) {
                         throw new Error('Invalid API response - no events data');
